# linux-speech-flow

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  REQUIREMENTS.md  SECURITY.md  config.example.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml
.omc/: project-memory.json
.omc/sessions/: 0de046d3-adfe-4a91-81c0-ed1ccbc08e1b.json  6a462dd7-5a9e-4f9d-9894-a6dec69558fb.json  93fbc52b-bcad-457f-8770-fdd67a973006.json  b64cc2a3-d313-4353-bc62-501d52d43f6f.json  c6fdd8d9-2374-4a4c-bb95-516f7a643d38.json
.omc/state/: agent-replay-31826704-e859-4d34-b4c6-e8f4d736e698.jsonl  hud-stdin-cache.json  idle-notif-cooldown.json
.omc/state/session-end-jobs/: b64cc2a3-d313-4353-bc62-501d52d43f6f.json  discovery.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-foundation-and-configuration/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md
.planning/phases/02-audio-capture-and-hotkey/: 02-01-PLAN.md  (+12 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: slack-setup.md
scripts/: postinst.sh  postrm.sh
src/linux_speech_flow/: __main__.py  app.py  audio.py  config.py  conversation_dialog.py  conversation_manager.py  conversation_pipeline.py  conversation_qa.py  conversation_recorder.py  conversation_status.py  conversation_viewer.py  debug_window.py  groq_client.py  help_window.py  history.py  history_window.py  hotkey.py  huddle_manager.py  huddle_recorder.py  huddle_status.py  injector.py  llm_router.py  notify.py  onboarding_dialog.py  recorder.py  reprocess_dialog.py  settings.py  slack_manager.py  slack_socket.py  transcription.py  tray.py  window_context.py  wizard.py
tests/: test_app_huddle.py  test_config.py  test_conversation_manager_session.py  test_conversation_output.py  test_conversation_pipeline.py  test_conversation_recorder.py  test_groq_client.py  test_history.py  test_hotkey.py  test_huddle_manager.py  test_huddle_recorder.py  test_injector.py  test_llm_router.py  test_onboarding_dialog.py  test_slack_manager.py  test_slack_socket.py  test_transcription_pipeline.py  test_transcription_utils.py
(+148 files in other folders)
