[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "linux-speech-flow"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "pulsectl>=24.0",
    "pynput>=1.8",
    "pasimple>=0.0.3",
    "groq>=1.0.0",
    "openai>=1.0.0",
    "google-genai",
    "trayer==0.1.1",
    "slack-sdk>=3.40.1",
    "numpy>=1.24",
]

[project.scripts]
linux-speech-flow = "linux_speech_flow.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
linux_speech_flow = ["sounds/*.wav", "icons/*.svg"]
