[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "linux-speech-flow"
dynamic = ["version"]
requires-python = ">=3.10"
description = "Speech-to-text Linux desktop app — hold a key, speak, text appears where you're typing"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "jonpastore"},
]
keywords = ["speech-to-text", "linux", "whisper", "groq", "gtk", "desktop", "dictation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Utilities",
]
dependencies = [
    "requests>=2.31",
    "pulsectl>=24.0",
    "pynput>=1.8",
    "pasimple>=0.0.3",
    "groq>=1.0.0",
    "openai>=1.0.0",
    "google-genai",
    "trayer==0.1.1",
    "slack-sdk>=3.40.1",
    "numpy>=1.24",
]

[project.scripts]
linux-speech-flow = "linux_speech_flow.app:main"

[project.urls]
Homepage = "https://github.com/jonpastore/linux-speech-flow"
Repository = "https://github.com/jonpastore/linux-speech-flow"
Issues = "https://github.com/jonpastore/linux-speech-flow/issues"
Changelog = "https://github.com/jonpastore/linux-speech-flow/blob/main/CHANGELOG.md"

[tool.setuptools_scm]
# Version from git tags (e.g. v0.2.0 -> 0.2.0). Untagged builds get a dev
# version; fallback covers sdist/no-git builds where scm metadata is absent.
fallback_version = "0.1.0"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
linux_speech_flow = ["sounds/*.wav", "icons/*.svg"]
